2003-02-03 Patrik Torstensson

	* MethodResponse.cs: Implemented
	* MethodCall.cs: added support for Cross appdomain messages, implemented some
	missing methods.
	* MethodDictionary.cs: made serializible and added methods to get internal properties.
	* MonoMethodMessage.cs: internal dictionary is now serializible
	* ReturnMessage.cs: made serializible
	* ErrorMessage.cs: typo fix
	
	* CADMessage.cs: new file, implements cross appdomain messages, both call and return. 
	Princip of this classes is to move unmutable objects and primitivs between appdomains
	without marshalling. This increase performance a lot of the cross appdomain channel.
	
2003-01-29  Lluis Sanchez Gual <lluis@ideary.com>
	
	* ServerContextTerminatorSink.cs: now it forwards messages to the target identity,
	  which knows how to manage each type of service.
	* StackBuilderSink.cs: added a reference to the target object.

2002-12-28  Patrik Torstensson

	* RemotingSurrogateSelector.cs: Added serialization support for MBR's.
	* RemotingSurrogate.cs: Moved ObjRefSurrogate and MBRSurrogate to new file.
	* ErrorMessage.cs: Dummy used when an exception occours.
	* MonoMethodMessage.cs: Added Serializable and support for be created with null methods

2002-12-26  Lluis Sanchez Gual <lluis@ideary.com>

	* ReturnMessage.cs: Implemented property Properties
	* RemotingSurrogateSelector.cs: Implemented serialization support for ObjRef.
	* MonoMethodMessage.cs: Implemented Properties and MethodSignature properties.
	* MethodReturnMessageWrapper.cs: Implemented.
	* MethodCallMessageWrapper.cs: Implemented.
	* MethodCall.cs: Implemented.
	* Header.cs: Small corrections to make it work.
	* MethodDictionary.cs: Added.
	* MethodCallDictionary.cs: Added.
	* MethodReturnDictionary.cs: Added.
	* ArgInfo.cs: Added.

2002-12-20  Lluis Sanchez Gual <lluis@ideary.com>

	* MonoMethodMessage.cs: Implemented property Uri

2002-12-20  Lluis Sanchez Gual <lluis@ideary.com>

	* ServerContextTerminatorSink.cs: Added