@@ -12,11 +12,11 @@ namespace System.Runtime.Remoting.Messaging
 {
 	internal class MethodCallDictionary : MethodDictionary
 	{
-		static string[] _keys = new string[] {"__Uri", "__MethodName", "__TypeName", "__MethodSignature", "__Args", "__CallContext"};
+		public static string[] InternalKeys = new string[] {"__Uri", "__MethodName", "__TypeName", "__MethodSignature", "__Args", "__CallContext"};
 
 		public MethodCallDictionary(IMethodMessage message) : base (message)
 		{
-			MethodKeys = _keys;
+			MethodKeys = InternalKeys;
 		}
 	}
 }
